[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-code-auditor"
version = "1.0.0"
description = "AST-based secure code auditing linter and LLM-powered helper to find vulnerabilities and code smells."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
